tests/paczka1/fuzzy1/85574830.err
Error in line 1: W91jNx0Nzl S214 26,2
Error in line 3: W91jNx0Nzl S920 8,4
Error in line 25: S214 S920 82,6
